--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ body{
 
     .Icons__itens{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
@@ -492,9 +492,8 @@ body{
         padding: 15px;
         font-size: 18px;
         background-color: rgb(255, 255, 255);
-        width: 30%;
-        height: 30%;
-        
+        width: 36%;
+        height: 25%;
     }
 
     /* Hobbies */
